begin interpolate values

--- a/AeroflyFS2TelemetryProvider.csproj
+++ b/AeroflyFS2TelemetryProvider.csproj
@@ -54,6 +54,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultimediaTimer.cs" />
     <Compile Include="TelemetryData.cs" />
     <Compile Include="TelemetryInfo.cs" />
     <Compile Include="TelemetryProvider.cs" />
